@@ -1,2 +1,2 @@
 title Lavalink Server
-java -Xmx2G --enable-native-access=ALL-UNNAMED -jar Lavalink-4.1.1.jar
+java -Xmx2G -jar Lavalink-4.2.2.jar
